# cotacoes_moedas

./: .gitignore  README.md  main.py  pyproject.toml  pytest.ini
cotacoes_moedas/: __init__.py  bcb_ptax.py  investing.py  juros.py  network_copy.py  network_sync.py  page_consistency.py  parsing.py  playwright_utils.py  redaction.py  storage.py  valor_globo.py
installer/: cotacoes-moedas.iss
planilhas/: cotacoes.csv  cotacoes.xlsx
scripts/: build_windows.ps1  copy_planilhas_to_network_manual.py
teste_david/: teste_copia.py
tests/: conftest.py  test_bcb_ptax.py  test_juros.py  test_main_selection.py  test_network_copy.py  test_page_consistency.py  test_storage.py
