[project]
name = "cotacoes-moedas"
version = "0.1.0"
description = ""
authors = [
    {name = "davidsc",email = "davidsc@zanotti.com.br"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.5",
    "playwright>=1.43.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
nuitka = "^2.4.0"
pytest = "^8.2.0"
